crates/jsonschema-codegen/tests/ui/invalid_required_element.stderr
error: 42 is not of type "string"
 --> tests/ui/invalid_required_element.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"required":[42]}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
