crates/jsonschema-codegen/tests/ui/invalid_required_element.rs
#[jsonschema::validator(schema = r#"{"required":[42]}"#)]
struct Validator;

fn main() {}
